--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -6,6 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
+        <!-->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
@@ -18,6 +19,7 @@
             <version>2.5.2</version>
             <scope>provided</scope>
         </dependency>
+        <-->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -30,6 +32,19 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>2.24</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- microprofile JWT Auth -->
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <version>2.1</version>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>7.0</version>
         </dependency>
     </dependencies>
     <build>
